# WEB_HW11

Fast2/: main.py  pyproject.toml
Fast2/src/: schemas.py
Fast2/src/database/: db.py  models.py
Fast2/src/repository/: users.py
Fast2/src/routes/: users.py
