[tool.poetry]
name = "fast2"
version = "0.1.0"
description = ""
authors = ["Oleksandr Malieiev <maleev1820@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
